--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f5f5;
+            
             margin: 0;
             padding: 0;
             text-align: center;
@@ -58,8 +58,8 @@
 
     <main>
         <img src=""/>
-        <p>Name:  MANIKANTA ILLA</p>
-        <p>Roll No: 226M1A0527</p>
+        <p>Name:  sanjay choudary</p>
+        <p>Roll No: 226M1A0515</p>
 
         <section class="department-section">
             <h2 class="department-title">Department Information</h2>
