--- a/home.html
+++ b/home.html
@@ -49,6 +49,10 @@
             font-size: 18px;
             color: #333;
         }
+        .image{
+            height:200px;
+            width:200px;
+        }
     </style>
 </head>
 <body>
@@ -57,7 +61,7 @@
     </header>
 
     <main>
-        <img src=""/>
+        <img class ="image" src="IMG_20240319_123410.jpg"/>
         <p>Name:  sanjay choudary</p>
         <p>Roll No: 226M1A0515</p>
 
