--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
 
     <main>
         <img class ="image" src="IMG_20240319_123410.jpg"/>
-        <p>Name:  sanjay choudary</p>
+        <p>Name:  Sanjay Chowdary</p>
         <p>Roll No: 226M1A0515</p>
 
         <section class="department-section">
